@@ -23,9 +23,9 @@ my $builder = Test::Run::Builder->new(
         'Carp' => 0,
         'Class::XSAccessor' => 0,
         'Exporter' => 0,
-        'Games::ABC_Path::Solver::Base' => 0,
-        'Games::ABC_Path::Solver::Constants' => 0,
-        'Games::ABC_Path::Solver::Board' => '0.1.0',
+        'Games::ABC_Path::Solver::Base' => '0.2.0',
+        'Games::ABC_Path::Solver::Constants' => '0.2.0',
+        'Games::ABC_Path::Solver::Board' => '0.2.0',
         'Getopt::Long' => '2.36',
         'integer' => 0,
         'perl' => 5.006,
