@@ -7,6 +7,7 @@ Revision history for Games-ABC_Path-Generator
     to merge the common parts of Games::ABC_Path::Solver and
     Games::ABC_Path::Generator.
     - Convert to the methods of Games::ABC_Path::Solver::Base . 
+        - Now requires Games::ABC_Path::Solver version 0.2.0.
     
 0.0.1       Thu Jul 21 19:02:11 IDT 2011
     - First version, released on an unsuspecting world.
